# GLFW-ImGui-shape-class

./: CMakeLists.txt  README.md
include/: cube.h  include.h  manager.h  quads.h  shader.h  window.h
shaders/: cube.fs  cube.vs  quads.vs  shader.fs
src/: cube.cpp  imgui.cpp  imgui_draw.cpp  imgui_impl_glfw_gl3.cpp  main.cpp  manager.cpp  quads.cpp  shader.cpp  window.cpp
